# Membra_kpi

./: .dockerignore  .env.example  .replit  BACKUPS.md  DEPLOYMENT_BLUEPRINT.md  DEPLOYMENT_PROVIDERS.md  Dockerfile  MEMBRA_MODULE.md  MEMBRA_PROTOCOL.md  PRODUCTION.md  README.md  SECURITY.md  app.py  dashboard.html  docker-compose.yml  fly.toml  index.html  manifest.webmanifest  marketplace_app.py  membra-config.json  netlify.toml  nginx.conf  package.json  pyproject.toml  railway.json  render.yaml  requirements.txt  sitemap.xml  vercel.json
api/: config.js
assets/: membra.css  membra.js
docs/: API_CONTRACT.md  AUTH_OWNERSHIP_ROADMAP.md  CONSENT_AND_DATA_DELETION.md  DEPLOYMENT_RUNBOOK.md  EVENT_OUTBOX.md  OPERATIONS_RUNBOOK.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READINESS.md  RENDER_VERCEL_CONNECT.md  SOFTWARE_ARCHITECTURE.md  START_TO_END_SYSTEM.md  VALUATION_300K_THESIS.md  VERCEL_FRONTEND.md
membra_kpi/: __init__.py  assetification.py  auth.py  deed_backend.py  deep_backend.py  event_outbox.py  events.py  external_providers.py  free_product_integrations.py  golden_prime_decision.py  huggingface_endpoints.py  hypermodular_databits.py  image_quality.py  image_sku_engine.py  infinite_kpi.py  info_gauntlets.py  inverted_llm.py  iot_ingest.py  iphone_marketplace.py  kpi_engine.py  language_fi.py  llm_concierge.py  llm_dag.py  llm_employee_bundle.py  marketplace.py  microoverworker.py  orchestration_dag.py  partner_endpoints.py  pricing.py  privacy.py  product_router.py  proofbook.py  proprietary_listing_os.py  provider_api.py  public_source_expansion.py  (+7 more)
(+42 files in other folders)
