[project]
name = "membra-kpi"
version = "1.1.0"
description = "MEMBRA KPI Assetification Marketplace — production-hardened Replit FastAPI system"
requires-python = ">=3.11"

[tool.ruff]
line-length = 220
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
